# polars-lineage

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/polars_lineage/: __init__.py  api.py  cli.py  config.py  ir.py  lineage_lazyframe.py  lineage_namespace.py  metadata_store.py  pipeline.py  resolver.py  validation.py
src/polars_lineage/exporter/: __init__.py  json.py  markdown.py  models.py  openmetadata.py  registry.py
src/polars_lineage/extractor/: __init__.py  explain_tree.py  expr_parser.py
tests/e2e/: test_pipeline.py
tests/unit/: test_api.py  test_cli.py  test_config.py  test_explain_tree_extractor.py  test_exporter_registry.py  test_expr_parser.py  test_ir.py  test_json_exporter.py  test_lineage_lazyframe.py  test_markdown_exporter.py  test_openmetadata_exporter.py  test_resolver.py  test_validation.py
